fixed overflow problem

--- a/frontend/src/Landing.css
+++ b/frontend/src/Landing.css
@@ -3,6 +3,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #1E232C;
+    overflow: hidden;
 }
 
 .upload-button {
